[gd_scene format=3 uid="uid://bc1u27sqdg3bc"]

[ext_resource type="Script" uid="uid://bynt8iibo0byu" path="res://scenes/ui/pause_menu/pause_menu.gd" id="1_rbnsh"]
[ext_resource type="PackedScene" uid="uid://jjtigtwswflp" path="res://scenes/ui/ui_background.tscn" id="2_rbnsh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1ch07"]

[node name="MainMenu" type="Control" unique_id=1857776059]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rbnsh")
metadata/_custom_type_script = "uid://bynt8iibo0byu"

[node name="UiBackground" parent="." unique_id=452482295 instance=ExtResource("2_rbnsh")]
layout_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=1282858164]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.31100002
anchor_top = 0.279
anchor_right = 0.689
anchor_bottom = 0.74300003
offset_left = 12.231995
offset_top = 10.155991
offset_right = -12.231995
offset_bottom = -22.036041
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer" unique_id=513143117]
layout_mode = 2
theme_type_variation = &"TitleLabel"
text = "Paused"
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer" unique_id=1513111467]
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxEmpty_1ch07")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer" unique_id=1237018134]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_constants/separation = 16

[node name="resumeButton" type="Button" parent="VBoxContainer/PanelContainer/VBoxContainer" unique_id=730990096]
unique_name_in_owner = true
layout_mode = 2
text = "Resume"

[node name="settingsButton" type="Button" parent="VBoxContainer/PanelContainer/VBoxContainer" unique_id=1242781479]
unique_name_in_owner = true
layout_mode = 2
text = "Settings"

[node name="quitButton" type="Button" parent="VBoxContainer/PanelContainer/VBoxContainer" unique_id=538543788]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"
